# Robocub-Home

./: README.md  requirements.txt
audio_capture/: CMakeLists.txt
audio_capture/scripts/prompts/: STATE12_GUEST_WELCOME_2.txt  STATE13_VERIFY_CHANGES.txt  STATE14_INTRODUCE_GUEST_2.txt  STATE15_FINAL_VERIFY.txt  STATE25_GUEST_COMPLIMENT.txt  STATE8_INTRODUCE_GUEST.txt
audio_detection/scripts/: audio.py  doorbell_detector_labels.txt
guest_stylist/: CMakeLists.txt  package.xml
guest_stylist/launch/: stylist.launch
maps/: receptionist_office.pgm  receptionist_office.yaml
messages/: package.xml
messages/msg/: AudioData.msg  GuestInfo.msg  GuestList.msg  Seat.msg
open_door/: package.xml
open_door/include/open_door/: open_door.h
open_door/launch/: open_door.launch
open_door/src/applications/: open_door_node.cpp
plane_segmentation/include/plane_segmentation/: plane_segmentation.h
plane_segmentation/launch/: plane_segmentation_tiago.launch
plane_segmentation/src/: plane_segmentation.cpp
point_to/: CMakeLists.txt
point_to/action/: PointTo.action
point_to/config/: poses.yaml
robocupproject/audio_capture/: package.xml
robocupproject/audio_capture/scripts/: smart_brain.py
robocupproject/audio_capture/scripts/prompts/: STATE1_HOST_GREETING.txt  STATE2_GUEST_WELCOME.txt  STATE9_VERIFY_SEATS.txt  random_talks.txt
robocupproject/audio_detection/: CMakeLists.txt  package.xml
robocupproject/guest_stylist/scripts/: stylist_node.py
robocupproject/guest_stylist/srv/: AnalyzeSnapshot.srv
robocupproject/messages/: CMakeLists.txt
robocupproject/messages/action/: PointTo.action
robocupproject/messages/msg/: PersonPose.msg  SeatArray.msg
robocupproject/open_door/: CMakeLists.txt
robocupproject/open_door/action/: OpenDoor.action
robocupproject/open_door/src/: open_door.cpp
robocupproject/plane_segmentation/: CMakeLists.txt  package.xml
robocupproject/plane_segmentation/src/applications/: plane_segmentation_node.cpp
robocupproject/point_to/: package.xml
robocupproject/point_to/launch/: point_to.launch
robocupproject/point_to/src/: point_to_node.cpp
robocupproject/seat_detector/: CMakeLists.txt
robocupproject/seat_detector/src/yolo_perception/: color_classifier.py
robocupproject/task_control/: CMakeLists.txt  README.md
robocupproject/task_control/config/: anti_slip.yaml
robocupproject/task_control/launch/: receptionist_nav.launch  receptionist_nav_custom.launch
robocupproject/task_control/scripts/: auto_localizer.py  force_amcl_init.py  map_odom_keyboard_tuner.py  odom_tf_broadcaster.py
robocupproject/task_control/src/task_control/: config.py
robocupproject/task_control/src/task_control/actions/: __init__.py  face_learning.py  head_mover.py  navigation_controller.py
robocupproject/task_control/src/task_control/states/: state_drive_and_speak.py  state_guest_compliment.py  state_guest_welcome.py  state_host_greeting.py  state_introduce_guest.py  state_rotate_to_door.py  state_verify_changes.py  state_wait_for_knock.py
robocupproject/yolo_perception/: package.xml  setup.py
seat_detector/: package.xml
seat_detector/scripts/: smart_seat_detector.py
task_control/: package.xml  setup.py
task_control/config/: amcl_receptionist.yaml  teb_loose.yaml
task_control/launch/: manual_infra.launch  receptionist_navigation.launch
task_control/rviz/: navigation config.rviz
task_control/src/task_control/: guest_manager.py  receptionist_sm.py
task_control/src/task_control/actions/: conversation.py  point_to.py
task_control/src/task_control/states/: state_drive_and_compliment.py  state_look_at_door.py  state_look_down.py  state_open_door.py  state_speak.py  state_turn_back.py  state_verify_seats.py  state_wait_for_next_guest.py
yolo_perception/: CMakeLists.txt
yolo_perception/scripts/: robust_face_tracker.py  yolo_node.py
